--- a/probe-rs/Cargo.toml
+++ b/probe-rs/Cargo.toml
@@ -45,6 +45,7 @@ serde_yaml = "0.8.11"
 static_assertions = "1.1.0"
 svg = "0.9.0"
 thiserror = "1.0.10"
+tracing = "0.1.26"
 
 # optional
 hexdump = { version = "0.1.0", optional = true }
@@ -66,3 +67,10 @@ reqwest = { version = "0.11.0", features = ["blocking", "json"] }
 serde_json = "1.0.47"
 serde = "1.0.118"
 structopt = "0.3"
+criterion = "0.3"
+tracing-subscriber = "0.2.18"
+tracing-flame = "0.1.0"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
